--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 
 <nav>
     <ul>
-        <li><a href="../courige/html/acco.html">accessories</a></li>
-        <li><a href="../courige/html/make.html">Makeup</a></li>
-        <li><a href="../courige/html/electro.html">electronics</a></li>
+        <li><a href="html/acco.html">accessories</a></li>
+        <li><a href="html/make.html">Makeup</a></li>
+        <li><a href="html/electro.html">electronics</a></li>
         <li><a href="index.html">Home Appliances</a></li>
     </ul>
 </nav>
